@@ -3,7 +3,6 @@ package br.com.basic.basic.ordemDeServico;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.ClassPathResource;
-import org.springframework.core.io.FileSystemResource;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.stereotype.Service;
@@ -14,7 +13,6 @@ import jakarta.mail.internet.MimeMessage;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
 
 @Service
 public class EmailService {
@@ -23,7 +21,7 @@ public class EmailService {
     private JavaMailSender mailSender;
 
     public void enviarEmailComAnexo(String[] to, String subject, ByteArrayOutputStream pdfContent) throws MessagingException, IOException {
-        // Lê o HTML do template
+        // Lê o HTML do template corretamente, compatível com JAR
         String html = lerHtmlTemplate("templates/email-template.html");
 
         MimeMessage message = mailSender.createMimeMessage();
@@ -31,13 +29,13 @@ public class EmailService {
 
         helper.setTo(to);
         helper.setSubject(subject);
-        helper.setText(html, true); // true para HTML
+        helper.setText(html, true); // true = envia como HTML
 
-        // Logo incorporada via Content-ID (cid)
-        ClassPathResource logo = new ClassPathResource("imagens/logo.png"); // ou onde você salvar
+        // Adiciona imagem inline (logo)
+        ClassPathResource logo = new ClassPathResource("imagens/logo.png");
         helper.addInline("logoBasicTelecom", logo);
 
-        // Anexo do PDF
+        // Adiciona PDF como anexo
         helper.addAttachment("ordem_de_servico.pdf", new ByteArrayResource(pdfContent.toByteArray()));
 
         mailSender.send(message);
@@ -45,7 +43,8 @@ public class EmailService {
 
     private String lerHtmlTemplate(String path) throws IOException {
         ClassPathResource resource = new ClassPathResource(path);
-        byte[] bytes = Files.readAllBytes(resource.getFile().toPath());
-        return new String(bytes, StandardCharsets.UTF_8);
+        try (var inputStream = resource.getInputStream()) {
+            return new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
+        }
     }
 }
